Cambios de entitie, dto,mock

--- a/web_api/web_api.csproj
+++ b/web_api/web_api.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\entities_library\entities_library.csproj" />
+    <ProjectReference Include="..\dao_library\dao_library.csproj" />
   </ItemGroup>
 
 </Project>
